<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".SpeakActivity">

    <EditText
        android:id="@+id/text_to_speak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/speak_activity_enter_text" />

    <Button
        android:id="@+id/speak_activity_speak_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speak_activity_speak_button" />

    <Button
        android:id="@+id/speak_activity_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speak_activity_back_button" />
</androidx.appcompat.widget.LinearLayoutCompat>